# 2DBP

./: .gitignore  2dbp.code-workspace  CMakeLists.txt  CMakeUserPresets.json  README.md  brom-transport.F90  calculate.F90  diff_center.F90  ids.F90  input_mod.F90  io_ascii.F90  io_netcdf.F90  io_netcdf_debug.F90  item_mod.F90  list_mod.F90  main.F90  tridiagonal.F90  types_mod.F90  util.F90
brom_niva_module/: CMakeLists.txt  README.md  niva_model_library.F90
brom_niva_module/brom/: brom_bact.F90  brom_bio.F90  brom_calcium.F90  brom_carbon.F90  brom_hg.F90  brom_injection.F90  brom_manganese.F90  brom_methane.F90  brom_pH.F90  brom_salt.F90  injection.F90  oxydep.F90
cmake/Modules/: FindNetCDF.cmake
code/: CMakeLists.txt  brom-transport.F90  calculate.F90  diff_center.F90  ids.F90  io_ascii.F90  io_netcdf.F90  main.F90  util.F90
code/cmake/Modules/: FindNetCDF.cmake
